--- a/manifestv1.json
+++ b/manifestv1.json
@@ -1,7 +1,7 @@
 {
     "short_name": "Orbita",
     "name": "Orbita lite",
-    "start_url": "/orbita/index.html",
+    "start_url": "/orbita.github.io/",
     "display": "standalone",
     "scope": "/",
     "theme_color": "#000000",
